objects/Apttus_Agreement_Assignment_Rule__c.object
<CustomObject>
    <description>This object is used to assign agreement records(mainly LWR) to users.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rule is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign this user LWR</description>
        <label>Assign to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreement_Assignment_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <description>Description of Rule</description>
        <label>Rule Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Assignment Rule</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Assign_to__c</columns>
        <columns>Active__c</columns>
        <columns>Rule_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <displayFormat>AAR-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>